# docs/swagger.yaml
@@ -6950,6 +6950,49 @@ paths:
       summary: Profile
       tags:
       - third-party
+  /api/v1/third-party/profile/images:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Uploads avatar images
+      parameters:
+      - description: Avatar image required
+        in: formData
+        name: avatar_image
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Success'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.ResultMessage'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/auth.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/auth.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/model.ResultMessage'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.ResultMessage'
+      security:
+      - BearerAuth: []
+      summary: Upload avatar images
+      tags:
+      - third-party
   /api/v1/third-party/registration-data:
     get:
       description: Returns registration data
